<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:background="#F6DDCC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="362dp"
        android:layout_height="51dp"
        android:fontFamily="@font/jerseyr"
        android:text="Inicio de sesión"
        android:textAlignment="center"
        android:textColor="#BA4A00"
        android:textDirection="inherit"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="204dp"
        android:layout_height="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/pre1" />

    <EditText
        android:id="@+id/Etext_correo"
        android:layout_width="267dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Correo Electrónico"
        android:textColor="#BA4A00"
        android:textSize="35sp"
        android:fontFamily="@font/jerseyr"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/Etxt_pass"
        android:layout_width="264dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="Contraseña"
        android:textColor="#BA4A00"
        android:textSize="35sp"
        android:inputType="textPassword"
        android:fontFamily="@font/jerseyr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="283dp"
        android:layout_height="57dp"
        android:backgroundTint="#A04000"
        android:fontFamily="@font/jerseyr"
        android:text="Ingresar"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jerseyr"
        android:text="¿Aún no tienes una cuenta?"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        android:clickable="true"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>