<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#F6DDCC"
    android:textAlignment="gravity"
    tools:context=".Questions">

    <TextView
        android:id="@+id/txt_npregunta"
        android:layout_width="362dp"
        android:layout_height="51dp"
        android:fontFamily="@font/jerseyr"
        android:text="Pregunta numero x"
        android:textAlignment="center"
        android:textColor="#BA4A00"
        android:textDirection="inherit"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="362dp"
        android:layout_height="108dp"
        android:fontFamily="@font/jerseyr"
        android:gravity="center"
        android:text="{Pregunta}"
        android:textAlignment="center"
        android:textColor="#5A0E03"
        android:textDirection="inherit"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/txt_res1"
        android:layout_width="361dp"
        android:layout_height="65dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jerseyr"
        android:gravity="center"
        android:text="{Respuesta1}"
        android:textAlignment="center"
        android:textColor="#89432B"
        android:textDirection="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/txt_res2"
        android:layout_width="363dp"
        android:layout_height="68dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jerseyr"
        android:gravity="center"
        android:text="{Respuesta2}"
        android:textAlignment="center"
        android:textColor="#89432B"
        android:textDirection="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/txt_res3"
        android:layout_width="363dp"
        android:layout_height="71dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jerseyr"
        android:gravity="center"
        android:text="{Respuesta3}"
        android:textAlignment="center"
        android:textColor="#89432B"
        android:textDirection="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/txt_res4"
        android:layout_width="362dp"
        android:layout_height="82dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jerseyr"
        android:gravity="center"
        android:text="{Respuesta4}"
        android:textAlignment="center"
        android:textColor="#89432B"
        android:textDirection="inherit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876" />
</androidx.constraintlayout.widget.ConstraintLayout>
